--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ jdk:
   - openjdk11
 
 script:
+  - sudo update-alternatives --config java
+  - sudo update-alternatives --config javac
   - sbt scriptit
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
