--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ arch:
 
 virt: vm
 group: edge
-dist: bionic
+dist: trusty
 
 jdk:
-  - openjdk11
+  - openjdk8
 
 script:
   - update-alternatives --config java
